Fixed padding on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -35,7 +35,7 @@ h1 {
 	margin: auto;
 	text-align: center;
 	margin-bottom: 17px;
-  margin-top: 50px;
+  margin-top: 20px;
 	width: 95%;
 }
 
@@ -550,6 +550,10 @@ cite a:hover,
 /***************************/
 
 @media screen and (min-width: 768px) {
+
+    h1 {
+      margin-top: 50px;
+    }
 
     .navbar {
         display: flex;
